--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
     "aws-sdk": "^2.1430.0",
     "bcrypt": "^5.1.0",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.1",
+    "jwt-decode": "^3.1.2",
     "mongoose": "^7.3.4",
     "multer": "^1.4.5-lts.1",
     "multer-s3": "^3.0.1",
+    "nodemailer": "^6.9.5",
     "twilio": "^4.14.0",
     "uuid": "^9.0.0"
   },
